<resources>
    <string name="app_name" translatable="false">Mercury Beirut</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_maps_key">AIzaSyA_91E5hVHrx2LLTG5dWjHUMGexMMCYyto</string>
    <string name="youtube_api_key">AIzaSyBQZqCKHohOs3i17Qwu0oh4qzH5Y-mun-g</string>
    <string name="device_id">device_id</string>
    <string name="enable_general_notifications">enable_general_notification</string>
    <string name="enable_classes_notifications">enable_classes_notifications</string>
    <string name="enable_events_notifications">enable_events_notifications</string>
    <string name="about_us">About us</string>
    <string name="members_area">Members Area</string>
    <string name="gym">Gym</string>
    <string name="academy">Academy</string>
    <string name="policies">Policies</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us_snippet">Emile Lahoud Highway</string>
    <string name="homepage">Homepage</string>
    <string name="schedule">Schedule</string>
    <string name="classes">Classes</string>
    <string name="classes_details">Classes Details</string>
    <string name="events">Events</string>
    <string name="events_details">Events Details</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_details">Gallery Details</string>
    <string name="get_notified">Get Notified</string>
    <string name="update_title">Update Available</string>
    <string name="update_message">New version is available, please update</string>
    <string name="update_ok">OK</string>
    <string name="update">Update</string>
    <string name="update_cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="no_internet">Problem with connection!</string>
    <string name="retry">Retry</string>
    <string name="username">username</string>
    <string name="member_id">Member ID</string>
    <string name="password">password</string>
    <string name="old_password">old password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="sign_up_login">Sign Up!</string>
    <string name="sign_up">Sign Up</string>
    <string name="id_no">Id Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_code_sms">Enter the verification code sent by sms</string>
    <string name="resend"> RESEND</string>
    <string name="no_code">RESEND THE CODE </string>
    <string name="name">name</string>
    <string name="mobile">mobile</string>
    <string name="dob">DOB</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="invoices">INVOICES</string>
    <string name="membership">MEMBERSHIP</string>
    <string name="workout_program">WORKOUT\nPROGRAM</string>
    <string name="pt">PERSONAL TRAINER</string>
    <string name="gym_filter">GYM</string>
    <string name="workouts">Workouts</string>
    <string name="workout">Workout</string>
    <string name="row_package">Package Type</string>
    <string name="row_status">Status</string>
    <string name="row_invoice">Invoice</string>
    <string name="row_description">Description</string>
    <string name="row_date">Invoice Date</string>
    <string name="row_date_text">Date</string>
    <string name="row_amount">Amount</string>
    <string name="row_start">Start Date</string>
    <string name="row_expiry">End date</string>
    <string name="send">Send</string>
    <string name="row_entries">Entries Left</string>
    <string name="row_session">Sessions Left</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_login">Invalid Username or Password</string>
    <string name="passwords_missmatch">Passwords mismatch!</string>
    <string name="wrong_email">Please enter a correct email</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="select_day">Select Day</string>
    <string name="status_active">Active</string>
    <string name="status_expired">Expired</string>
    <string name="status_pending">Pending</string>
    <string name="status_frozen">Frozen</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="mobile_number_error">Please Insert a valid Lebanese Number</string>
    <string name="logout">Logout</string>
    <string name="image">Image</string>
    <string name="invalid_pin">Invalid Pin</string>
    <string name="description">Description</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_">Change Password!</string>
    <string name="successfully_changed">Password successfully changed</string>
    <string name="choose_your_class">Choose\nyour class</string>
    <string name="rent_a_court">Rent a Court</string>
    <string name="membership_renewal">Membership\nRenewal</string>
    <string name="membership_renewal_title">Membership Renewal</string>
    <string name="choose_package">Package</string>
    <string name="membership_status">Membership Status</string>
    <string name="membership_status_cap">MEMBERSHIP STATUS</string>
    <string name="fitness_classes">Fitness Classes</string>
    <string name="fitness_classes_at">Fitness Classes \n At Mercury</string>
    <string name="academies">Academies</string>
    <string name="payments_history">Payments History</string>
    <string name="gift_card">Gift Card</string>
    <string name="guess_passes">Guest Passes</string>
    <string name="refer_a_friend">Refer a \nFriend</string>
    <string name="loyalty_points_c">LOYALTY POINTS</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="current_balance">Current Balance</string>
    <string name="history">HISTORY</string>
    <string name="csr">CSR</string>
    <string name="rules_regulations">Rules and \n Regulations</string>
    <string name="membership_renewal_">Renew Membership</string>
    <string name="renew_pt">Renew PT Sessions</string>
    <string name="changing_personal_trainer">*Looking to change your Personal Trainer? Kindly send us a request and our membership advisors will reach out to you.</string>
    <string name="basketball">BasketBall</string>
    <string name="football">Football</string>
    <string name="Tennis">Tennis</string>
    <string name="swimming">Swimming</string>
    <string name="aerial">Aerial YOGA</string>
    <string name="boxing">Boxing</string>
    <string name="fitness_classes_mercury">FITNESS\nCLASSES AT\n MERCURY</string>
    <string name="basketball_mercury">Basketball At Mercury</string>
    <string name="fitness_description">More than just workout classes . Fitness classes at Mercury are remarkable . Created and developed\n by the industry\'s   best minds . Taught in specially \ndesigned studios  and pristine spaces </string>
    <string name="basketball_description">Employing a holistic , 360 degree approach to player development with focuses on education , leadership , character development , and life skills . Basketball at Mercury implements a curriculum developed by leading player development coaches that teaches the fundamentals of the game helping student-athletes improve individually and as teammates , athleticism , and stay healthy</string>
    <string name="not_a_member">NOT A MEMBER YET AND WANT TO TRY A CLASS?</string>
    <string name="looking_to_join">LOOKING TO JOIN OUT ACADEMY?</string>
    <string name="fill_up">Submit your request and our membership advisors will contact you to confirm your attendance</string>
    <string name="fill_up_2">Fill up the below form and our membership advisors will contact you to confirm the attendance</string>
    <string name="exprience_mercury">Experience Mercury for yourself </string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date">Date</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="issued">Issued</string>
    <string name="expired">Expired</string>
    <string name="guest_name">Guest Name</string>
    <string name="guest_phone_number">Guest Phone Number</string>
    <string name="one_day_text">Send a friend this pass and show us what we have to offer.</string>
    <string name="send_guest_pass">Send Guest Pass</string>
    <string name="buy_guest_pass">Buy Extra Pass</string>
    <string name="invite_n_a_friend">Invite Friend</string>
    <string name="refer_text_2">When they join,you will receive a LBP 100,000 Mercury Gift Card.</string>
    <string name="text">Text</string>
    <string name="submit_request">Submit Request</string>
    <string name="csr_proud">MERCURY IS PROUD TO ANNOUNCE \n ITS PARTNERSHIP WITH \n LIVE LOVE RECYCLE :</string>
    <string name="commit_csr">to commit to a change and create and impact.</string>
    <string name="csr_mission">Mercury and Live Love Recycle thrive to deliver solutions to the wastes in Lebanon by promoting a Healthy Enviroment and  Managing Wastes.\nWe aim to help in solving Lebanons Waste Crisis; by picking up recyclable waste and distribute it to Recycling facilities.  </string>
    <string name="live_love_recycle">Live Love Recycle</string>
    <string name="beirut_landmars">Beirut Landmarks</string>
    <string name="viaEmail">via Email</string>
    <string name="viaText">via Text</string>
    <string name="guest_passes_available">Guest Passes Available :</string>
    <string name="register_now">Register Now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="renewal">Renewal</string>
    <string name="request_gift_card">Request gift Card</string>
    <string name="amount">Amount</string>
    <string name="id_no_or_email">ID No or Email</string>
    <string name="please_enter_your_friend_information">Please enter your friend information</string>
    <string name="login_to_your_new_state">Login to your new state</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="History">History</string>
    <string name="edit_information">Edit Information</string>
    <string name="points">points</string>
    <string name="renew_membership">Renew Membership</string>
    <string name="register">REGISTER</string>
    <string name="start_date">Start date</string>
    <string name="suggested_classes">Suggested Classes</string>
    <string name="see_all"><![CDATA[See All >]]></string>
    <string name="coach">Coach</string>
    <string name="assistant_coaches">Assistant Coaches</string>
    <string name="full_schedule">Full Schedule</string>
    <string name="proceed">Proceed</string>
    <string name="one_day_guest_pass">One-Day Guest Pass</string>
    <string name="fill_all_data">Fill all data</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="purchase_gift">Purchase Gift Card</string>
    <string name="sms">SMS</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="dialog_ok">OK</string>
    <string name="try_again">Please Try Again</string>
    <string name="set_password">Set Password</string>
    <string name="you_show_us">You Show Us Love, We Show You Love</string>
    <string name="when_they_join">When they join,you will receive a LBP 100,000 Mercury Gift Card.</string>
    <string name="friends_invited">Friends Invited</string>
</resources>