<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_start_end"
                android:paddingEnd="@dimen/margin_start_end"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/login_logo_height"
                    android:layout_marginTop="@dimen/logo_margin_top_reset"
                    android:layout_gravity="center"
                    android:src="@drawable/mercury_new_logo"
                    />
                <com.ids.mercury.custom.CustomTextViewLight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_font"
                    android:text="@string/set_password"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/big_margin"
                    android:gravity="center"/>


                <EditText
                    android:background="@drawable/thick_white_border"
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:layout_marginTop="@dimen/big_margin"
                    android:textSize="@dimen/normal_font"
                    android:paddingStart="@dimen/normal_margin"
                    android:paddingEnd="@dimen/normal_margin"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_gray" />

                <EditText
                    android:background="@drawable/thick_white_border"
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:gravity="center_vertical"
                    android:hint="@string/confirm_password"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:textSize="@dimen/normal_font"
                    android:paddingStart="@dimen/normal_margin"
                    android:paddingEnd="@dimen/normal_margin"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_gray" />

                <Button
                    android:id="@+id/btSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginTop="@dimen/big_margin"
                    android:background="@color/button_blue"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_font" />
            </LinearLayout>
        </ScrollView>
        <include layout="@layout/loading_trans"/>
    </RelativeLayout>



</LinearLayout>